css/personal.css
@font-face {
	font-family: 'Noto Sans TC';
	src: url(NotoSansTC-Regular.otf);
}

body {
	font-family: 'Noto Sans TC';
}


.header_block {
	margin-left: 150px;
	margin-top: 60px;
	line-height: 1.5
}

.about_block {
	position: relative;
	width: 700px;
	margin-left: 450px;
	margin-top: 275px;
	line-height: 1.5;
	display: inline-block;
	max-width: 100%;
    overflow-x: hidden;
  	
}

img {
    max-width: 100%;
}

.image_block {
	position: absolute;
	width: 700px;
	height: auto;
	left: 450px;
	top: 60px;
}

